# ag-news-text-classification

./: .dockerignore  .editorconfig  .env.example  .env.local  .env.test  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AI-capstone-M1L1-v1.ipynb  ARCHITECTURE.md  CHANGELOG.md  FashionMNISTProject-v1.ipynb  Final Project League of Legends Match Predictor-v2.ipynb  Final project.ipynb  LICENSE  MANIFEST.in  Makefile  Question_1.ipynb  Question_2.ipynb  Question_3.ipynb  Question_4.ipynb  Question_5.ipynb  Question_6.ipynb  Question_7.ipynb  Question_8.ipynb  Question_9.ipynb  README.md  SIC_AI_Capstone Project_Presentation Slide Template.pptx  SIC_AI_Capstone_Project_Action_Plan.docx  SIC_AI_Capstone_Project_Work_Breakdown_Structure.xlsx  app.py  commitlint.config.js  environment.yml  index.html  install.sh  predict.py  pyproject.toml  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api_tests.yml  benchmarks.yml  cd.yml  ci.yml  compatibility_matrix.yml.yml  dependency_updates.yml  docker-publish.yml  docs_sync_check.yml  documentation.yml  local_deployment_test.yml  overfitting_checks.yml  platform_compatibility.yml  regression_tests.yml  service_tests.yml  test_platform_detection.yml  tests.yml
ARCHITECTURE/: index.html
CHANGELOG/: index.html
FREE_DEPLOYMENT_GUIDE/: index.html
HEALTH_CHECK/: index.html
IDE_SETUP_GUIDE/: index.html
LOCAL_MONITORING_GUIDE/: index.html
OVERFITTING_PREVENTION/: index.html
PERFORMANCE/: index.html
PLATFORM_OPTIMIZATION_GUIDE/: index.html
QUICK_START/: index.html
ROADMAP/: index.html
SECURITY/: index.html
SOTA_MODELS_GUIDE/: index.html
TROUBLESHOOTING/: index.html
app/: __init__.py  streamlit_app.py
app/pages/: 01_Home.py  02_Single_Prediction.py  03_Batch_Analysis.py  04_Model_Comparison.py  05_Interpretability.py  06_Performance_Dashboard.py
ci/: build_docker.sh  deploy.sh  lint.yml  run_benchmarks.sh  run_tests.sh  test.yml  test_api.sh  test_services.sh
configs/: __init__.py  base.yaml  compatibility_matrix.yaml  config_loader.py  config_schema.py  config_validator.py  constants.py  deberta_config.yaml  ensemble_config.yaml  longformer_config.yaml  lora_config.yaml  pretrain_config.yaml  smart_defaults.py
configs/api/: auth_config.yaml  graphql_config.yaml  grpc_config.yaml  rate_limit_config.yaml  rest_config.yaml
configs/data/: ag_news.yaml  ag_news_fr.yaml  ag_news_vi.yaml
configs/environments/: colab.yaml  dev.yaml  kaggle.yaml  local_prod.yaml  prod.yaml  staging.yaml
configs/features/: feature_flags.yaml
configs/models/: deberta_v3_base.yaml  deberta_v3_small.yaml  mdeberta_v3.yaml  modernbert_base.yaml  modernbert_large.yaml  modernbert_large_seed13.yaml  modernbert_large_seed13_rdrop.yaml  modernbert_large_seed42_rdrop.yaml  modernbert_large_seed73.yaml  modernbert_large_seed73_rdrop.yaml  setfit.yaml  xlm_r_large.yaml
configs/secrets/: api_keys.template.yaml  secrets.template.yaml
configs/services/: data_service.yaml  model_service.yaml  monitoring_service.yaml  orchestration.yaml  prediction_service.yaml  training_service.yaml
configs/sweeps/: optuna_deberta.yaml
deployment/docker/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.gpu  Dockerfile.services  docker-compose.prod.yml  docker-compose.yml
deployment/kubernetes/: api-deployment.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml  services-deployment.yaml
docs/_static/: custom.css
experiments/: __init__.py  experiment_runner.py
experiments/ablation_studies/: component_ablation.py  data_ablation.py  feature_ablation.py  model_size_ablation.py  prompt_ablation.py
experiments/benchmarks/: accuracy_benchmark.py  memory_benchmark.py  robustness_benchmark.py  sota_comparison.py  speed_benchmark.py
experiments/hyperparameter_search/: bayesian_optimization.py  hyperband.py  optuna_search.py  ray_tune_search.py
experiments/results/: experiment_tracker.py  leaderboard_generator.py  result_aggregator.py
experiments/sota_experiments/: ensemble_sota.py  full_pipeline_sota.py  gpt4_distilled_sota.py  production_sota.py  prompt_based_sota.py  single_model_sota.py
getting_started/choosing_platform/: index.html
getting_started/free_deployment/: index.html
getting_started/installation/: index.html
javascripts/: mathjax.js
notebooks/: README.md  colab_demo.ipynb  domain_adaptive_pretrain.ipynb  error_analysis_xai.ipynb  explore_dataset.ipynb  train_visualization.ipynb
quickstart/: README.md  api_quickstart.py  colab_notebook.ipynb  demo_app.py  evaluate_simple.py  minimal_example.py  train_simple.py
reports/: model_card.md  risk_register.md  scope_and_metrics.md
requirements/: all.txt  all_local.txt  api.txt  base.txt  colab.txt  data.txt  dev.txt  docs.txt  efficient.txt  free_tier.txt  kaggle.txt  llm.txt  local_monitoring.txt  local_prod.txt  minimal.txt  ml.txt  prod.txt  research.txt  robustness.txt  services.txt  ui.txt
scripts/: __init__.py  benchmark_all_latency.py  calibrate_model.py  ensemble_inference.py  export_all_int8.py  local_inference.py  make_demo_cards.py  make_slide_figures.py  phase1_kickoff.py  phase2_eda.py  phase3_baselines.py  phase4_transformers.py  phase5_multilingual.py  phase6_setfit.py  phase7_evaluation.py  phase8_deployment.py  phase9_report.py  run_cv.sh  run_ensemble.sh  run_full_pipeline.sh  run_preprocess.sh  run_pretrain_dapt.sh  run_pseudo_label.sh  run_stack.sh  run_train_deberta.sh  run_train_longformer.sh  sync_from_remote.py
search/: search_index.json
src/: __init__.py  __version__.py  cli.py  cv_run.py  data_utils.py  deberta_lora.py  ensemble.py  evaluate.py  explainability.py  inference.py  longformer_lora.py  predict_pipeline.py  pretrain_lm.py  pseudo_label.py  stacking.py  train.py  train_longformer.py  utils.py
src/api/: __init__.py  (+2 more)
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_configs.py  test_few_shot.py  test_metrics.py
(+443 files in other folders)
