# Setup Configuration
# ===================
# Alternative configuration for setuptools
# Author: Võ Hải Dũng

[metadata]
name = ag-news-classification
version = 1.0.0
author = Võ Hải Dũng
description = AG News Text Classification Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir = 
    = src
python_requires = >=3.8
install_requires = 
    torch>=2.0.0
    transformers>=4.35.0
    numpy>=1.24.0
    pandas>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest>=7.4.0
    black>=23.11.0
    flake8>=6.1.0
